<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ttlptwit</artifactId>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-batch</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jooq</artifactId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-graphql</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq-codegen</artifactId>
      <version>${jooq.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq-meta-extensions</artifactId>
      <version>${jooq.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq-meta-extensions-liquibase</artifactId>
      <version>${jooq.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
    </dependency>
    <dependency>
      <groupId>io.github.redouane59.twitter</groupId>
      <artifactId>twittered</artifactId>
      <version>2.21</version>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.batch</groupId>
      <artifactId>spring-batch-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <description>Demo project for Spring Boot</description>
  <groupId>com.broughty</groupId>
  <name>ttlptwit</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.7.5</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <java.version>17</java.version>
    <jooq.version>3.17.4</jooq.version>
  </properties>


  <version>0.0.1-SNAPSHOT</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.jooq</groupId>
        <artifactId>jooq-codegen-maven</artifactId>
        <version>${jooq.version}</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <generator>
            <database>
              <name>org.jooq.meta.extensions.liquibase.LiquibaseDatabase</name>
              <properties>

                <property>
                  <key>rootPath</key>
                  <value>${basedir}/src/main/resources/db/changelog</value>
                </property>

                <!-- Specify the location of your XML script. -->
                <property>
                  <key>scripts</key>
                  <!--                  <value>classpath:/db/changelog/db.changelog-master.xml</value>-->
                  <value>db.changelog-master.xml</value>
                </property>

                <!-- Whether you want to include liquibase tables in generated output
                     - false (default)
                     - true: includes DATABASECHANGELOG and DATABASECHANGELOGLOCK tables -->
                <property>
                  <key>includeLiquibaseTables</key>
                  <value>false</value>
                </property>

                <!-- Properties prefixed "database." will be passed on to the liquibase.database.Database class
                     if a matching setter is found -->
                <property>
                  <key>database.liquibaseSchemaName</key>
                  <value>public</value>
                </property>

                <!-- The property "changeLogParameters.contexts" will be passed on to the
                     liquibase.database.Database.update() call (jOOQ 3.13.2+).
                     See https://www.liquibase.org/documentation/contexts.html -->
                <property>
                  <key>changeLogParameters.contexts</key>
                  <value>!test</value>
                </property>
              </properties>
            </database>
            <generate>
              <records>true</records>
            </generate>
            <target>
              <packageName>com.broughty.ttlptwit.database.jooq.data</packageName>
              <directory>src/main/java</directory>
            </target>
          </generator>
        </configuration>
      </plugin>


    </plugins>
  </build>


</project>
